RESOLVED FIXED179490
ResourceErrorBase::setType should not ASSERT if it is a no op
https://bugs.webkit.org/show_bug.cgi?id=179490
Summary ResourceErrorBase::setType should not ASSERT if it is a no op
youenn fablet
Reported 2017-11-09 10:26:50 PST
Sometimes, our code base is setting twice setType with the same value when doing navigation loads through ServiceWorker.
Attachments
Patch (1.58 KB, patch)
2017-11-09 10:27 PST, youenn fablet
no flags
youenn fablet
Comment 1 2017-11-09 10:27:40 PST
WebKit Commit Bot
Comment 2 2017-11-09 11:01:02 PST
Comment on attachment 326466 [details] Patch Clearing flags on attachment: 326466 Committed r224638: <https://trac.webkit.org/changeset/224638>
WebKit Commit Bot
Comment 3 2017-11-09 11:01:04 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-11-15 09:43:19 PST
Note You need to log in before you can comment on or make changes to this bug.