ResourceErrorBase::setType should not ASSERT if it is a no op https://bugs.webkit.org/show_bug.cgi?id=179490

Patch by Youenn Fablet <youenn@apple.com> on 2017-11-09
Reviewed by Chris Dumez.

No change of behavior.

* platform/network/ResourceErrorBase.cpp:
(WebCore::ResourceErrorBase::setType):

Canonical link: https://commits.webkit.org/195536@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224638 268f45cc-cd09-0410-ab3c-d52691b4dbfc